--- a/index.html
+++ b/index.html
@@ -390,8 +390,10 @@
         items: [
           { name: "Shape Oven Marfim - Happy", price: 120, image: "img/oven-marfim.png" },
           { name: "Shape Oven Marfim - High", price: 120, image: "img/oven-marfim-h.png" },
+          { name: "Shape Skatude Marfim - Bege", price: 120, image: "img/oven-marfim-h.png" },
           { name: "Shape Oven Maple - Happy", price: 200, image: "img/oven-marfim.png" },
           { name: "Shape Oven Maple - High", price: 200, image: "img/oven-marfim-h.png" },
+          { name: "Shape Skatude Maple - Logo", price: 200, image: "img/oven-marfim-h.png" },
           { name: "Shape Oven Maple - Ozzy </br> (Encomenda)", price: 200, image: "img/oven-maple-ozzy.jpg" },
           { name: "Shape Oven Maple - Make Your Choice </br> (Encomenda)", price: 200, image: "img/oven-maple-make.png" },
           { name: "Shape Oven Maple - Bob Marley </br> (Poucas unidades)", price: 250, image: "img/oven-maple.png" }
