--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         items: [
           { name: "Shape Oven Marfim - Happy", price: 120, image: "img/oven-marfim.png" },
           { name: "Shape Oven Marfim - High", price: 120, image: "img/oven-marfim-h.png" },
-          { name: "Shape Skatude Marfim - Bege", price: 120, image: "img/oven-marfim-h.png" },
+          { name: "Shape Skatude Marfim - Logo", price: 120, image: "img/oven-marfim-h.png" },
           { name: "Shape Oven Maple - Happy", price: 200, image: "img/oven-marfim.png" },
           { name: "Shape Oven Maple - High", price: 200, image: "img/oven-marfim-h.png" },
           { name: "Shape Skatude Maple - Logo", price: 200, image: "img/oven-marfim-h.png" },
