--- a/index.html
+++ b/index.html
@@ -388,15 +388,10 @@
       {
         category: "Shapes",
         items: [
-          { name: "Shape Oven Marfim - Happy", price: 120, image: "img/oven-marfim.png" },
-          { name: "Shape Oven Marfim - High", price: 120, image: "img/oven-marfim-h.png" },
-          { name: "Shape Skatude Marfim - Logo", price: 120, image: "img/skatude-marfim.png" },
-          { name: "Shape Oven Maple - Happy", price: 200, image: "img/oven-marfim.png" },
-          { name: "Shape Oven Maple - High", price: 200, image: "img/oven-marfim-h.png" },
-          { name: "Shape Skatude Maple - Logo", price: 200, image: "img/skatude-maple.png" },
-          { name: "Shape Oven Maple - Bob Marley </br> (Poucas unidades)", price: 250, image: "img/oven-maple.png" },
-          { name: "Shape Oven Maple - Ozzy </br> (Encomenda)", price: 200, image: "img/oven-maple-ozzy.jpg" },
-          { name: "Shape Oven Maple - Make Your Choice </br> (Encomenda)", price: 200, image: "img/oven-maple-make.png" }
+          { name: "Shape Oven Marfim - Ozzy", price: 120, image: "img/oven-maple-ozzy.jpg" },
+          { name: "Shape Oven Marfim - Make Your Choice", price: 120, image: "img/oven-maple-make.png" },
+          { name: "Shape Oven Maple - Ozzy", price: 200, image: "img/oven-maple-ozzy.jpg" },
+          { name: "Shape Oven Maple - Make Your Choice", price: 200, image: "img/oven-maple-make.png" }
         ]
       },
       {
