--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
         category: "Shapes",
         items: [
           { name: "Shape Oven Marfim - Ozzy", price: 120, image: "img/oz.jpg" },
-          { name: "Shape Oven Marfim - Make Your Choice", price: 120, image: "img/make.png" },
+          { name: "Shape Oven Marfim - Make Your Choice", price: 120, image: "img/make.jpg" },
           { name: "Shape Oven Maple - Ozzy", price: 200, image: "img/oz.jpg" },
-          { name: "Shape Oven Maple - Make Your Choice", price: 200, image: "img/make.png" }
+          { name: "Shape Oven Maple - Make Your Choice", price: 200, image: "img/make.jpg" }
         ]
       },
       {
