--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         category: "Lixas (consultar desenhos)",
         items: [
           { name: "Lixa Jessup - Jessup", price: 55, image: "img/lx-jessup.webp" },
-          { name: "Lixa Desenhada - Boss", price: 65, image: "img/lixa-boss.jpg" },
+          { name: "Lixa Desenhada - Black Sheep", price: 55, image: "img/lixa-bs.jpg" },
           { name: "Lixa Desenhada - Grizzly", price: 70, image: "img/grizzly.jpg" }
         ]
       },
