--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
       {
         category: "Lixas (consultar desenhos)",
         items: [
-          { name: "Lixa Jessup - Jessup", price: 55, image: "img/lx-jessup.webp" },
+          { name: "Lixa Emborrachada - Visible", price: 35, image: "img/lx-visible.jpg" },
+          { name: "Lixa Emborrachada - Boss", price: 50, image: "img/lx-boss.jpg" },
           { name: "Lixa Desenhada - Black Sheep", price: 55, image: "img/lixa-bs.jpg" },
           { name: "Lixa Desenhada - Grizzly", price: 70, image: "img/grizzly.jpg" }
         ]
